--- a/css/estilos.css
+++ b/css/estilos.css
@@ -223,7 +223,56 @@ a:hover {
   }
 
 
+/*ANIMACIONES */
 
+.textoAnimado {
+    animation-name: texto;
+    animation-duration: 5s;
+}
+
+.objetoAnimado {
+    animation-name: objeto;
+    animation-duration: 3s;
+
+}
+@keyframes texto {
+    from {
+        transform: translateX(1000px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes objeto {
+    0% {
+        border-radius: 50%;
+    }
+
+    25% {
+        border-radius: 25%;
+    }
+
+    50% {
+        border-radius: 15%;
+    }
+
+    80% {
+        border-radius: 8%;
+    }
+
+    100% {
+        border-radius: 4%;
+    }
+
+
+     
+
+
+}
 
 
 
